arc: Optimize app search provider.

App search provider already has optimization that runs update result
deferred in certain cases. This also includes cases when new app
registered or existing app updated. However in last case we always do
refresh apps inline. This CL also defers Refresh app when it
possible. Additionally that has protection not to list not yet
registered ARC default apps.

TEST=Manually, using 2 step fix. On first step verified that
     ArcAppListPrefs did not return not yet registered default app. At
     second step verified that app data search provider refreshes apps
     deferred and functionality is not broken
BUG=907590

Change-Id: I12b015c02e0c59d19e49926f11d5632adf25ad9a
Reviewed-on: https://chromium-review.googlesource.com/c/1356012
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Yury Khmel <khmel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612817}
Former-commit-id: 72b519c2050c88299375ef7249bf616110ae873a